k8s-deployments/Kustomize/base/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-360
  labels:
    app: app-360
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-360
  template:
    metadata:
      labels:
        app: app-360
    spec:
      containers:
      - name: app-360
        image: jaguaracr.azurecr.io/app/app-360:latest
        resources:
          requests:
            cpu: "1000m"
            memory: "4Gi" 
        ports:
        - containerPort: 80
