k8s-deployments/Kustomize/base/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-360
spec:
  selector:
    app: app-360
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
